--- a/src/main/resources/templates/film.html
+++ b/src/main/resources/templates/film.html
@@ -60,6 +60,10 @@ img {
 		<dt class="col-sm-offset-2 col-sm-3">Synopsis :</dt>
 		 <dd class="col-sm-7"><p th:text="${film.synopsis}"></p> </dd>
 	</dl>
+		<dl class="row">
+			<dt class="col-sm-offset-2 col-sm-3">Avis :</dt>
+			<dd class="col-sm-7"><p th:text="${film.avis}"></p> </dd>
+		</dl>
 		<br>
 		<br>
 			
